<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="todomodel"
            type="com.demo.todolist.modules.Todolist" />


        <variable
            name="uptodoviewmodel"
            type="com.demo.todolist.viewmodel.UpdateTodoListViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.EditTodoListActivity">


        <LinearLayout
            android:id="@+id/line_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20dim"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/lay_header">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dim"
                android:gravity="center"
                android:text="@string/str_edit_title"
                android:textSize="@dimen/_20dim"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_tst_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_workname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name"
                    android:inputType="text"
                    android:text="@={todomodel.work_name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_tst_discrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_tst_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/discription"
                    android:inputType="text"
                    android:text="@={todomodel.description}" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_tst_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                app:layout_constraintTop_toBottomOf="@+id/txt_tst_discrip">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/date"
                    android:inputType="text"
                    android:text="@={todomodel.date}" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_tst_privarty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_tst_date">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/edit_provarity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/privarty"
                    android:text="@={todomodel.priority}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dim"
                android:longClickable="true"
                android:onClick="@{() -> uptodoviewmodel.updateTodoListItem(todomodel.todoid,editWorkname.getText().toString(),editDescription.getText().toString().trim() ,editDate.getText().toString())}"
                android:text="@string/Save"
                app:finishEditActivity="@{true}"
                app:layout_constraintTop_toBottomOf="@+id/txt_tst_privarty" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>